--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <blockquote id="bq" data-text="💞">
         <!-- Update the messages for a birthday greeting -->
         <p id="kalimat">
-          Happy Birthday, gorgeous! Today is all about celebrating you.
+          Happy Birthday, gorgeous Apoorva! Today is all about celebrating you.
         </p>
 
         <!-- Message -->
@@ -71,7 +71,7 @@
           Today, I wish you a year filled with laughter, love, and unforgettable moments.
         </p>
         <p id="pesan6" class="sty2">
-          Remember, you deserve every happiness in the world. Celebrate big and enjoy every moment!
+          Apoorva 🩷 you’ve always been that special friend who turns ordinary moments into beautiful memories ❤️ No matter the distance, our laughter, support, and crazy training stories stay close to my heart 🥰 You truly deserve all the happiness, success, and magic life has to offer — keep smiling and celebrating every little win 💛
         </p>
 
         <!-- Next Button -->
