--- a/love/index.html
+++ b/love/index.html
@@ -24,7 +24,7 @@
             <img src="./images/r8.jpeg" alt="">
             <img src="./images/r9.jpeg" alt="">
             <img src="./images/r10.jpeg" alt="">
-            <p>Happy Birthday Apoorva</p>
+            <p>Happy Birthday Cutiee!</p>
         </div>
         <div id="ground"></div>
     </div>
