--- a/love/index.html
+++ b/love/index.html
@@ -36,8 +36,7 @@
 
     <!-- Audio tự động phát -->
     <audio id="myAudio" autoplay playsinline>
-        <source src="music/mm.mpeg" type="audio/mpeg">
-        <source src="music/mm.ogg" type="audio/ogg">
+        <source src="music/mm.mp3" type="audio/mp3">
     </audio>
 
     <script src="main.js"></script>
